Refactor tender repository to use typed records via MapStruct
Replace Map<String, Object> with TendersRecord for insert/update.
Add toRecord and updateRecord mappings to TenderMapper following
the ContactMapper pattern. Remove manual field-building boilerplate
from service. Use full-text search and aligned cursor pagination.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>